[package]
name = "arcdps-imgui-sys"
version = "0.8.0"
edition = "2018"
authors = ["The imgui-rs Developers"]
description = "Raw FFI bindings to dear imgui; forked for use in arcdps addons"
homepage = "https://github.com/gw2scratch/imgui-rs"
repository = "https://github.com/gw2scratch/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "external-ffi-bindings"]
build = "build.rs"
links = "imgui"
# exclude json, lua, and the imgui subdirs (imgui/examples, imgui/docs, etc)
exclude = ["third-party/*.json", "third-party/*.lua", "third-party/imgui/*/"]

[dependencies]
chlorine = "1.0.7"

[build-dependencies]
cc = "1.0"
pkg-config = { version="0.3", optional=true }

[features]
default = []
wasm = []
freetype = ["pkg-config"]
